<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/icons"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/signup_title"
            android:id="@+id/textView"
            android:textColor="@color/primary_text"
            android:textSize="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/input_login_email"
                android:layout_gravity="center_horizontal"
                android:hint="@string/login_email_hint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_signup"
                android:onClick="onSignUp"
                android:id="@+id/btn_signup"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/signup_has_account"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_padding"
                android:textColor="@color/divider"
                android:textStyle="italic" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:id="@+id/btn_login"
                android:onClick="onLogin"
                android:layout_alignBottom="@+id/linearLayout"
                android:layout_alignLeft="@+id/linearLayout"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_marginTop="@dimen/base_padding" />
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

    </RelativeLayout>
</LinearLayout>