<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sendme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="@dimen/card_elevation">

        <FrameLayout
            android:layout_marginBottom="@dimen/base_padding"
            android:layout_marginTop="@dimen/base_padding"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loading_topic_card_processing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/talk_about"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="@dimen/base_padding" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar2"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loading_topic_card_fail"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/message_fail_to_connect_server"
                    android:id="@+id/textView6"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/base_padding"
                    android:gravity="center" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_fail_to_load_topic"
                    android:id="@+id/button2"
                    android:layout_below="@+id/textView6"
                    android:layout_centerHorizontal="true"
                    android:onClick="onRetryToLoadTopic" />
            </RelativeLayout>

        </FrameLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
